Fixed header content on smaller screens

--- a/styles.css
+++ b/styles.css
@@ -62,6 +62,12 @@ textarea {
   float:left;
 }
 
+#headerDiv{
+  display: flex;
+  visibility: visible;
+  margin-bottom: 10px;
+}
+
 #submitCreate{
   float:left;
 }
